--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	</main>
 	<aside>
         <div>
-            <h1>Thank You!</h1>
+            <h1>That's all for now</h1>
         </div>
 	</aside>
 
