--- a/index.html
+++ b/index.html
@@ -159,11 +159,21 @@
 				<div class="card__content">
 					<div>
 						<h2>No Javascript</h2>
-						<p>...but can be added with Web Animations API</p>
+                        <p>Javascript is not needed for styling a page or for animations. Nor do you need any framework and library.</p>
+						<p>(...if you really want to use JS here you can with Web Animations API)</p>
                         <p><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Animations_API/Using_the_Web_Animations_API" target="_blank" class="btn btn--accent">WAAPI</a></p>
 					</div>
                     <div class="animation_div">
-                        
+                        <div class="perspective">
+                            <div id="box3">
+                              <div class="face top"></div>
+                              <div class="face bottom"></div>
+                              <div class="face back"></div>
+                              <div class="face front"></div>
+                              <div class="face left"></div>
+                              <div class="face right"></div>
+                            </div>
+                          </div>
                     </div>
 				</div>
 			</li>
