--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Scroll-driven Animations</title>
-
+    <link rel="icon" type="image/x-icon" href="public/myAvatar.ico">
 
 	<link rel="stylesheet" href="style.css">
 
@@ -80,8 +80,11 @@
 				<div class="card__content">
 					<div>
 						<h2>Scroll driven animations</h2>
-						<p>Pre-requisite - CSS animations</p>
-						<p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animations" target="_blank" class="btn btn--accent">Read about animation</a></p>
+                        <p>Use chrome browser. It is a relatively new feature (in 2024) which means current browser support is not great.</p>
+                        <p><a href="https://caniuse.com/?search=animation-timeline" target="_blank" class="btn btn--accent">Can I use?</a></p>
+                        
+
+						<p>Pre-requisite - CSS animations <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animations" target="_blank" class="btn btn--accent">Read about animation</a></p>
 					</div>
                     <div class="animation_div">
                         <div id="box"></div>
